prepared D2D-VOIP-{TU,RR,PF}

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -340,6 +340,29 @@ extends = d2dVsCell
 **.schedulingDisciplineDl = "PROPFAIR"
 
 
+[Config D2D-VOIP-TU]
+extends=Base
+*.numUeD2DTx_VoIP = ${n=6..12 step 2}
+*.numUeD2DRx_VoIP = ${n}
+**.vector-recording = false
+output-scalar-file = ${resultdir}/${configname}/n${n}_rep${repetition}.sca
+*.ueD2D*[*].mobility.initialX = uniform(265m,295m) 
+*.ueD2D*[*].mobility.initialY = uniform(305m,340m) # d <= 46,1m
+sim-time-limit=5s
+repeat = 10
+**.numBands = ${numRBs = 6}
+**.deployer.numRbDl = ${numRBs}
+**.deployer.numRbUl = ${numRBs}
+**.schedulingDisciplineUl = "TU_GAME"
+**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
+
+[Config D2D-VOIP-RR]
+**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
+
+[Config D2D-VOIP-PF]
+**.schedulingDisciplineUl = "PROPFAIR"
+
+
 [Config TUGAME-VoIP-D2D_only]
 extends=Base
 *.numUeD2DTx_VoIP = 1
