prepared D2D-VOIP-{TU,RR,PF}

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -357,9 +357,11 @@ repeat = 10
 **.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 
 [Config D2D-VOIP-RR]
+extends=D2D-VOIP-TU
 **.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
 
 [Config D2D-VOIP-PF]
+extends=D2D-VOIP-TU
 **.schedulingDisciplineUl = "PROPFAIR"
 
 
