prepared D2D-VOIP-{TU,RR,PF}

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -75,8 +75,8 @@ network=FrequencyNetwork
 ### Positioning.
 *.eNodeB.mobility.initialX = 300m
 *.eNodeB.mobility.initialY = 300m
-*.ueD2D*[*].mobility.initialX = uniform(185m,205m) 
-*.ueD2D*[*].mobility.initialY = uniform(435m,460m) 
+*.ueD2D*[*].mobility.initialX = uniform(265m,295m) 
+*.ueD2D*[*].mobility.initialY = uniform(305m,340m) # d <= 46,1m
 *.ueCell*[*].mobility.initialX = uniform(150m,250m)
 *.ueCell*[*].mobility.initialY = uniform(400m,500m)
 
@@ -342,14 +342,14 @@ extends = d2dVsCell
 
 [Config D2D-VOIP-TU]
 extends=Base
-*.numUeD2DTx_VoIP = ${n=6..12 step 2}
+*.numUeD2DTx_VoIP = ${n=8..20 step 2}
 *.numUeD2DRx_VoIP = ${n}
 **.vector-recording = false
 output-scalar-file = ${resultdir}/${configname}/n${n}_rep${repetition}.sca
 *.ueD2D*[*].mobility.initialX = uniform(265m,295m) 
 *.ueD2D*[*].mobility.initialY = uniform(305m,340m) # d <= 46,1m
-sim-time-limit=5s
-repeat = 10
+sim-time-limit=15s
+repeat = 20
 **.numBands = ${numRBs = 6}
 **.deployer.numRbDl = ${numRBs}
 **.deployer.numRbUl = ${numRBs}
@@ -480,3 +480,31 @@ repeat = 30
 **.deployer.numRbDl = 6
 **.deployer.numRbUl = 6
 **.numBands = 6
+
+
+[Config TU-VOIP-VS-FULBUF]
+extends = Base
+*.numUeD2DTx_FULBUF = 6
+*.numUeD2DRx_FULBUF = 6
+*.numUeD2DTx_vid = 3
+*.numUeD2DRx_vid = 3
+**.deployer.numRbDl = 6
+**.deployer.numRbUl = 6
+**.numBands = 6
+**.schedulingDisciplineUl = "TU_GAME"
+sim-time-limit=2s
+repeat = 30
+*.ueD2DTx_vid[0].mobility.initialX = 310m 
+*.ueD2DTx_vid[0].mobility.initialY = 300m
+*.ueD2DRx_vid[0].mobility.initialX = 310m 
+*.ueD2DRx_vid[0].mobility.initialY = 340m
+
+*.ueD2DTx_vid[1].mobility.initialX = 320m 
+*.ueD2DTx_vid[1].mobility.initialY = 300m
+*.ueD2DRx_vid[1].mobility.initialX = 320m 
+*.ueD2DRx_vid[1].mobility.initialY = 360m
+
+*.ueD2DTx_vid[2].mobility.initialX = 330m 
+*.ueD2DTx_vid[2].mobility.initialY = 300m
+*.ueD2DRx_vid[2].mobility.initialX = 330m 
+*.ueD2DRx_vid[2].mobility.initialY = 380m 
