--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -482,18 +482,18 @@ repeat = 30
 **.numBands = 6
 
 
-[Config TU-VOIP-VS-FULBUF]
+[Config TU-VID-VS-FULBUF-TU]
 extends = Base
-*.numUeD2DTx_FULBUF = 6
-*.numUeD2DRx_FULBUF = 6
+*.numUeD2DTx_FULBUF = ${n=4..10 step 2}
+*.numUeD2DRx_FULBUF = ${n}
 *.numUeD2DTx_vid = 3
 *.numUeD2DRx_vid = 3
 **.deployer.numRbDl = 6
 **.deployer.numRbUl = 6
 **.numBands = 6
 **.schedulingDisciplineUl = "TU_GAME"
-sim-time-limit=2s
-repeat = 30
+sim-time-limit=10s
+repeat = 15
 *.ueD2DTx_vid[0].mobility.initialX = 310m 
 *.ueD2DTx_vid[0].mobility.initialY = 300m
 *.ueD2DRx_vid[0].mobility.initialX = 310m 
@@ -502,9 +502,17 @@ repeat = 30
 *.ueD2DTx_vid[1].mobility.initialX = 320m 
 *.ueD2DTx_vid[1].mobility.initialY = 300m
 *.ueD2DRx_vid[1].mobility.initialX = 320m 
-*.ueD2DRx_vid[1].mobility.initialY = 360m
+*.ueD2DRx_vid[1].mobility.initialY = 350m
 
 *.ueD2DTx_vid[2].mobility.initialX = 330m 
 *.ueD2DTx_vid[2].mobility.initialY = 300m
 *.ueD2DRx_vid[2].mobility.initialX = 330m 
-*.ueD2DRx_vid[2].mobility.initialY = 380m 
+*.ueD2DRx_vid[2].mobility.initialY = 360m 
+
+[Config TU-VID-VS-FULBUF-PF]
+extends = TU-VID-VS-FULBUF-TU
+**.schedulingDisciplineUl = "PROPFAIR"
+
+[Config TU-VID-VS-FULBUF-RR]
+extends = TU-VID-VS-FULBUF-TU
+**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
