prepared stackelcompare_known and stackelcompare_known_random configs

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -516,3 +516,45 @@ extends = TU-VID-VS-FULBUF-TU
 [Config TU-VID-VS-FULBUF-RR]
 extends = TU-VID-VS-FULBUF-TU
 **.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
+
+
+[Config stackelcompare_known]
+extends = Base
+sim-time-limit=10s
+repeat = 15
+**.vector-recording = false
+*.numUeCellTx_FULBUF = 2
+*.numUeCellRx_FULBUF = 2
+*.numUeD2DTx_FULBUF = 2
+*.numUeD2DRx_FULBUF = 2
+
+*.eNodeB.mobility.initialX = 300m
+*.eNodeB.mobility.initialY = 300m
+
+*.ueD2DTx_FULBUF[0].mobility.initialX = 350m # far from leader1, close to leader2 
+*.ueD2DTx_FULBUF[0].mobility.initialY = 309m 
+*.ueD2DRx_FULBUF[0].mobility.initialX = 360m 
+*.ueD2DRx_FULBUF[0].mobility.initialY = 309m
+
+*.ueD2DTx_FULBUF[1].mobility.initialX = 250m # far from leader2, close to leader1
+*.ueD2DTx_FULBUF[1].mobility.initialY = 309m
+*.ueD2DRx_FULBUF[1].mobility.initialX = 240m 
+*.ueD2DRx_FULBUF[1].mobility.initialY = 309m
+
+*.ueCellTx_FULBUF[0].mobility.initialX = 240m # far from pair1, close to pair2 
+*.ueCellTx_FULBUF[0].mobility.initialY = 310m
+*.ueCellRx_FULBUF[0].mobility.initialX = 250m 
+*.ueCellRx_FULBUF[0].mobility.initialY = 310m
+
+*.ueCellTx_FULBUF[1].mobility.initialX = 360m # far from pair2, close to pair1 
+*.ueCellTx_FULBUF[1].mobility.initialY = 310m
+*.ueCellRx_FULBUF[1].mobility.initialX = 350m 
+*.ueCellRx_FULBUF[1].mobility.initialY = 310m
+
+**.oracle.stackelberg_scheduleFollowers = "STA"
+**.schedulingDisciplineUl = "STACKELBERG_GAME"
+
+[Config stackelcompare_known_random]
+extends = stackelcompare_known
+**.oracle.stackelberg_scheduleFollowers = "RAND"
+
