fixed wrong output filename

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -494,6 +494,7 @@ extends = Base
 **.schedulingDisciplineUl = "TU_GAME"
 sim-time-limit=10s
 repeat = 15
+output-scalar-file = ${resultdir}/${configname}/n${n}_rep${repetition}.sca
 *.ueD2DTx_vid[0].mobility.initialX = 310m 
 *.ueD2DTx_vid[0].mobility.initialY = 300m
 *.ueD2DRx_vid[0].mobility.initialX = 310m 
