fixed stackelcompare configs

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -416,36 +416,35 @@ repeat = 10
 **.vector-recording = false
 output-scalar-file = ${resultdir}/${configname}/n${n}_rep${repetition}.sca
 
-**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN_REUSE"
+**.oracle.stackelberg_scheduleLeaders = "RR"
+**.oracle.stackelberg_scheduleFollowers = "RAND"
+**.schedulingDisciplineUl = "STACKELBERG_GAME"
 **.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 
 [Config stackelcompare_rr_sta]
 extends = stackelcompare_rr_random
 **.oracle.stackelberg_scheduleLeaders = "RR"
+**.oracle.stackelberg_scheduleFollowers = "STA"
 **.schedulingDisciplineUl = "STACKELBERG_GAME"
-**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 
 [Config stackelcompare_rr_noreuse]
 extends = stackelcompare_rr_random
 **.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
-**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 
 
 [Config stackelcompare_tu_sta]
 extends = stackelcompare_rr_random
 **.oracle.stackelberg_scheduleLeaders = "TU"
+**.oracle.stackelberg_scheduleFollowers = "STA"
 **.schedulingDisciplineUl = "STACKELBERG_GAME"
-**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 
 [Config stackelcompare_tu_random]
-extends = stackelcompare_tu_sta
+extends = stackelcompare_rr_random
 **.schedulingDisciplineUl = "TU_GAME_RANDOMREUSE"
-**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 
 [Config stackelcompare_tu_noreuse]
-extends = stackelcompare_tu_sta
+extends = stackelcompare_rr_random
 **.schedulingDisciplineUl = "TU_GAME"
-**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 
 
 [Config stackelcompare_modded_sta]
