finished analysis of TU

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -517,6 +517,14 @@ extends = TU-VID-VS-FULBUF-TU
 extends = TU-VID-VS-FULBUF-TU
 **.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
 
+[Config vidtest]
+extends = TU-VID-VS-FULBUF-TU
+*.numUeD2DTx_FULBUF = 0
+*.numUeD2DRx_FULBUF = 0
+*.numUeD2DTx_vid = 1
+*.numUeD2DRx_vid = 1
+output-scalar-file = ${resultdir}/${configname}/rep${repetition}.sca
+
 
 [Config stackelcompare_known]
 extends = Base
