prepared stackelcompare_tu* configs

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -395,61 +395,51 @@ extends=TUGAME-VoIP-D2D_only
 
 
 
-[Config stackelcompare_rr_random]
+[Config stackelcompare_tu_noreuse]
 extends = Base
-sim-time-limit=15s
+sim-time-limit=5s
 repeat = 10
 *.eNodeB.mobility.initialX = 345m
 *.eNodeB.mobility.initialY = 390m
-*.ue*[*].mobility.initialX = uniform(265m,295m) 
-*.ue*[*].mobility.initialY = uniform(305m,340m) # d_d2d <= 46,1m
-#*.ueCell*[*].mobility.initialX = uniform(150m,250m)
-#*.ueCell*[*].mobility.initialY = uniform(300m,400m)
+*.ue*[*].mobility.initialX = uniform(275m,290m) 
+*.ue*[*].mobility.initialY = uniform(305m,330m) # d_d2d <= 29.15m
 **.numBands = ${numRBs = 6}
 **.deployer.numRbDl = ${numRBs}
 **.deployer.numRbUl = ${numRBs}
 
-*.numUeD2DTx_FULBUF = ${n=10..30 step 10}
-*.numUeD2DRx_FULBUF = ${n}
-*.numUeCellTx_FULBUF = ${n}
-*.numUeCellRx_FULBUF = ${n}
+*.numUeD2DTx_VoIP = ${n=6..12 step 2}
+*.numUeD2DRx_VoIP = ${n}
+*.numUeCellTx_VoIP = ${n}
+*.numUeCellRx_VoIP = ${n}
 **.vector-recording = false
 output-scalar-file = ${resultdir}/${configname}/n${n}_rep${repetition}.sca
 
-**.oracle.stackelberg_scheduleLeaders = "RR"
-**.oracle.stackelberg_scheduleFollowers = "RAND"
-**.schedulingDisciplineUl = "STACKELBERG_GAME"
+**.schedulingDisciplineUl = "TU_GAME"
 **.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 
-[Config stackelcompare_rr_sta]
-extends = stackelcompare_rr_random
-**.oracle.stackelberg_scheduleLeaders = "RR"
-**.oracle.stackelberg_scheduleFollowers = "STA"
+[Config stackelcompare_tu_random]
+extends = stackelcompare_tu_noreuse
+
 **.schedulingDisciplineUl = "STACKELBERG_GAME"
-
-[Config stackelcompare_rr_noreuse]
-extends = stackelcompare_rr_random
-**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
-
+**.oracle.stackelberg_scheduleLeaders = "TU"
+**.oracle.stackelberg_scheduleFollowers = "RAND"
 
 [Config stackelcompare_tu_sta]
-extends = stackelcompare_rr_random
+extends = stackelcompare_tu_noreuse
+
+**.schedulingDisciplineUl = "STACKELBERG_GAME"
 **.oracle.stackelberg_scheduleLeaders = "TU"
 **.oracle.stackelberg_scheduleFollowers = "STA"
-**.schedulingDisciplineUl = "STACKELBERG_GAME"
 
-[Config stackelcompare_tu_random]
-extends = stackelcompare_rr_random
-**.schedulingDisciplineUl = "TU_GAME_RANDOMREUSE"
-
-[Config stackelcompare_tu_noreuse]
-extends = stackelcompare_rr_random
-**.schedulingDisciplineUl = "TU_GAME"
+[Config stackelcompare_tu_sta_tx]
+extends = stackelcompare_tu_sta
+**.oracle.stackelberg_setTxPower = true
 
 
-[Config stackelcompare_modded_sta]
-extends = stackelcompare_rr_sta
-**.schedulingDisciplineUl = "MODDED_STACKELBERG_GAME"
+
+#[Config stackelcompare_modded_sta]
+#extends = stackelcompare_rr_sta
+#**.schedulingDisciplineUl = "MODDED_STACKELBERG_GAME"
 
 
 [Config throughput_d2d_cell]
@@ -561,6 +551,10 @@ repeat = 15
 
 **.oracle.stackelberg_scheduleFollowers = "STA"
 **.schedulingDisciplineUl = "STACKELBERG_GAME"
+
+[Config stackecompare_known_tx]
+extends = stackelcompare_known
+**.oracle.stackelberg_setTxPower = true
 
 [Config stackelcompare_known_random]
 extends = stackelcompare_known
