prepared stackelcompare_tu* configs with delta=0

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -412,7 +412,8 @@ repeat = 30
 *.numUeCellTx_VoIP = ${n}
 *.numUeCellRx_VoIP = ${n}
 **.vector-recording = false
-output-scalar-file = ${resultdir}/${configname}/n${n}_rep${repetition}.sca
+**.oracle.stackelberg_delta = 0.0
+output-scalar-file = ${resultdir}/${configname}/deltazero_n${n}_rep${repetition}.sca
 
 **.schedulingDisciplineUl = "TU_GAME"
 **.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
