prepared modded Stackelberg

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -436,6 +436,10 @@ extends = stackelcompare_tu_noreuse
 extends = stackelcompare_tu_sta
 **.oracle.stackelberg_setTxPower = true
 
+[Config stackelcompare_modded]
+extends = stackelcompare_tu_noreuse
+**.schedulingDisciplineUl = "MODDED_STACKELBERG_GAME"
+
 
 
 #[Config stackelcompare_modded_sta]
