--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -413,7 +413,7 @@ repeat = 30
 *.numUeCellRx_VoIP = ${n}
 **.vector-recording = false
 **.oracle.stackelberg_delta = 0.0
-output-scalar-file = ${resultdir}/${configname}/deltazero_n${n}_rep${repetition}.sca
+output-scalar-file = ${resultdir}/${configname}/n${n}_rep${repetition}.sca
 
 **.schedulingDisciplineUl = "TU_GAME"
 **.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
@@ -436,7 +436,7 @@ extends = stackelcompare_tu_noreuse
 extends = stackelcompare_tu_sta
 **.oracle.stackelberg_setTxPower = true
 
-[Config stackelcompare_modded]
+[Config stackelcompare_tu_modded]
 extends = stackelcompare_tu_noreuse
 **.schedulingDisciplineUl = "MODDED_STACKELBERG_GAME"
 
