TU-VID-VS-FULBUF-STA and stackelcompare_tu_modded_p_study configs

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -394,8 +394,7 @@ extends=TUGAME-VoIP-D2D_only
 **.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 
 
-
-[Config stackelcompare_tu_noreuse]
+[Config stackelcompare_base]
 extends = Base
 sim-time-limit=15s
 repeat = 30
@@ -406,17 +405,19 @@ repeat = 30
 **.numBands = ${numRBs = 6}
 **.deployer.numRbDl = ${numRBs}
 **.deployer.numRbUl = ${numRBs}
+**.vector-recording = false
+**.oracle.stackelberg_delta = 0.0
 
+**.schedulingDisciplineUl = "TU_GAME"
+**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
+
+[Config stackelcompare_tu_noreuse]
+extends = stackelcompare_base
 *.numUeD2DTx_VoIP = ${n=6..12 step 2}
 *.numUeD2DRx_VoIP = ${n}
 *.numUeCellTx_VoIP = ${n}
 *.numUeCellRx_VoIP = ${n}
-**.vector-recording = false
-**.oracle.stackelberg_delta = 0.0
 output-scalar-file = ${resultdir}/${configname}/n${n}_rep${repetition}.sca
-
-**.schedulingDisciplineUl = "TU_GAME"
-**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 
 [Config stackelcompare_tu_random]
 extends = stackelcompare_tu_noreuse
@@ -440,6 +441,16 @@ extends = stackelcompare_tu_sta
 extends = stackelcompare_tu_noreuse
 **.schedulingDisciplineUl = "MODDED_STACKELBERG_GAME"
 
+[Config stackelcompare_tu_modded_p_study]
+extends = stackelcompare_base
+**.schedulingDisciplineUl = "MODDED_STACKELBERG_GAME"
+repeat = 5
+*.oracle.d2dPenalty = ${p=0..1 step 0.1}
+*.numUeD2DTx_VoIP = 10
+*.numUeD2DRx_VoIP = 10
+*.numUeCellTx_VoIP = 10
+*.numUeCellRx_VoIP = 10
+output-scalar-file = ${resultdir}/${configname}/n10_p${p}_rep${repetition}.sca
 
 
 #[Config stackelcompare_modded_sta]
@@ -511,6 +522,12 @@ extends = TU-VID-VS-FULBUF-TU
 [Config TU-VID-VS-FULBUF-RR]
 extends = TU-VID-VS-FULBUF-TU
 **.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
+
+[Config TU-VID-VS-FULBUF-STA]
+extends = TU-VID-VS-FULBUF-TU
+**.schedulingDisciplineUl = "MODDED_STACKELBERG_GAME"
+*.oracle.d2dPenalty = 0.8
+
 
 [Config vidtest]
 extends = TU-VID-VS-FULBUF-TU
