--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -445,6 +445,7 @@ extends = stackelcompare_tu_noreuse
 extends = stackelcompare_base
 **.schedulingDisciplineUl = "MODDED_STACKELBERG_GAME"
 repeat = 5
+sim-time-limit=2s
 *.oracle.d2dPenalty = ${p=0..1 step 0.1}
 *.numUeD2DTx_VoIP = 10
 *.numUeD2DRx_VoIP = 10
