prepared stackelcompare_tu_modded_p_study_2 config

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -445,13 +445,18 @@ extends = stackelcompare_tu_noreuse
 extends = stackelcompare_base
 **.schedulingDisciplineUl = "MODDED_STACKELBERG_GAME"
 repeat = 5
-sim-time-limit=2s
 *.oracle.d2dPenalty = ${p=0..1 step 0.1}
 *.numUeD2DTx_VoIP = 10
 *.numUeD2DRx_VoIP = 10
 *.numUeCellTx_VoIP = 10
 *.numUeCellRx_VoIP = 10
 output-scalar-file = ${resultdir}/${configname}/n10_p${p}_rep${repetition}.sca
+
+[Config stackelcompare_tu_modded_p_study_2]
+extends = stackelcompare_tu_modded
+repeat = 15
+*.oracle.d2dPenalty = ${p=0.6..1 step 0.1}
+output-scalar-file = ${resultdir}/${configname}/n{n}_p${p}_rep${repetition}.sca
 
 
 #[Config stackelcompare_modded_sta]
