lots of eval; had forgot $ in output scalar filename... duh

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -456,7 +456,7 @@ output-scalar-file = ${resultdir}/${configname}/n10_p${p}_rep${repetition}.sca
 extends = stackelcompare_tu_modded
 repeat = 15
 *.oracle.d2dPenalty = ${p=0..1 step 0.25}
-output-scalar-file = ${resultdir}/${configname}/n{n}_p${p}_rep${repetition}.sca
+output-scalar-file = ${resultdir}/${configname}/n${n}_p${p}_rep${repetition}.sca
 
 
 #[Config stackelcompare_modded_sta]
