preparing paper sim rerun

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -441,6 +441,18 @@ extends = stackelcompare_tu_sta
 extends = stackelcompare_tu_noreuse
 **.schedulingDisciplineUl = "MODDED_STACKELBERG_GAME"
 
+[Config paper_voip_sta]
+extends = stackelcompare_tu_modded
+
+[Config paper_voip_pf]
+extends = stackelcompare_tu_modded
+**.schedulingDisciplineUl = "PROPFAIR"
+
+[Config paper_voip_rr]
+extends = stackelcompare_tu_modded
+**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
+
+
 [Config stackelcompare_tu_modded_p_study]
 extends = stackelcompare_base
 **.schedulingDisciplineUl = "MODDED_STACKELBERG_GAME"
