updated paper sims

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -442,7 +442,24 @@ extends = stackelcompare_tu_sta_tx
 **.schedulingDisciplineUl = "MODDED_STACKELBERG_GAME"
 
 [Config paper_voip_sta]
-extends = stackelcompare_tu_modded
+extends = Base
+sim-time-limit=15s
+repeat = 30
+*.numUeD2DTx_VoIP = ${n=8..20 step 4}
+*.numUeD2DRx_VoIP = ${n}
+*.numUeCellTx_VoIP = 0
+*.numUeCellRx_VoIP = 0
+*.eNodeB.mobility.initialX = 345m
+*.eNodeB.mobility.initialY = 390m
+*.ue*[*].mobility.initialX = uniform(275m,290m) 
+*.ue*[*].mobility.initialY = uniform(305m,330m) # d_d2d <= 50m
+**.numBands = ${numRBs = 6}
+**.deployer.numRbDl = ${numRBs}
+**.deployer.numRbUl = ${numRBs}
+**.vector-recording = false
+
+**.schedulingDisciplineUl = "MODDED_STACKELBERG_GAME"
+**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 
 [Config paper_voip_pf]
 extends = stackelcompare_tu_modded
