updated paper sims

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -462,11 +462,11 @@ repeat = 30
 **.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 
 [Config paper_voip_pf]
-extends = stackelcompare_tu_modded
+extends = paper_voip_sta
 **.schedulingDisciplineUl = "PROPFAIR"
 
 [Config paper_voip_rr]
-extends = stackelcompare_tu_modded
+extends = paper_voip_sta
 **.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
 
 
