forgot proper output scalar naming

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -457,6 +457,7 @@ repeat = 30
 **.deployer.numRbDl = ${numRBs}
 **.deployer.numRbUl = ${numRBs}
 **.vector-recording = false
+output-scalar-file = ${resultdir}/${configname}/n${n}_rep${repetition}.sca
 
 **.schedulingDisciplineUl = "MODDED_STACKELBERG_GAME"
 **.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
