interferenceTester config re-added for Pisa paper

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -618,3 +618,67 @@ extends = stackelcompare_known
 extends = stackelcompare_known
 **.oracle.stackelberg_scheduleFollowers = "RAND"
 
+
+[Config interferenceTesterNew]
+extends=Base
+
+*.numUeD2DTx_FULBUF = 10
+*.numUeD2DRx_FULBUF = 10
+**.deployer.numRbDl = 5
+**.deployer.numRbUl = 5
+**.numBands = 5
+**.schedulingDisciplineUl = "REUSE_TESTER"
+**.schedulingDisciplineDl = "REUSE_TESTER"
+
+*.ueD2DTx_FULBUF[1].mobility.initialX = 310m
+*.ueD2DTx_FULBUF[1].mobility.initialY = 300m
+*.ueD2DRx_FULBUF[1].mobility.initialX = 310m
+*.ueD2DRx_FULBUF[1].mobility.initialY = 310m
+
+*.ueD2DTx_FULBUF[2].mobility.initialX = 320m
+*.ueD2DTx_FULBUF[2].mobility.initialY = 300m
+*.ueD2DRx_FULBUF[2].mobility.initialX = 320m
+*.ueD2DRx_FULBUF[2].mobility.initialY = 310m
+
+*.ueD2DTx_FULBUF[3].mobility.initialX = 330m
+*.ueD2DTx_FULBUF[3].mobility.initialY = 300m
+*.ueD2DRx_FULBUF[3].mobility.initialX = 330m
+*.ueD2DRx_FULBUF[3].mobility.initialY = 310m
+
+*.ueD2DTx_FULBUF[4].mobility.initialX = 340m
+*.ueD2DTx_FULBUF[4].mobility.initialY = 300m
+*.ueD2DRx_FULBUF[4].mobility.initialX = 340m
+*.ueD2DRx_FULBUF[4].mobility.initialY = 310m
+
+*.ueD2DTx_FULBUF[5].mobility.initialX = 310m
+*.ueD2DTx_FULBUF[5].mobility.initialY = 315m
+*.ueD2DRx_FULBUF[5].mobility.initialX = 310m
+*.ueD2DRx_FULBUF[5].mobility.initialY = 325m
+
+*.ueD2DTx_FULBUF[6].mobility.initialX = 320m
+*.ueD2DTx_FULBUF[6].mobility.initialY = 315m
+*.ueD2DRx_FULBUF[6].mobility.initialX = 320m
+*.ueD2DRx_FULBUF[6].mobility.initialY = 325m
+
+*.ueD2DTx_FULBUF[7].mobility.initialX = 330m
+*.ueD2DTx_FULBUF[7].mobility.initialY = 315m
+*.ueD2DRx_FULBUF[7].mobility.initialX = 330m
+*.ueD2DRx_FULBUF[7].mobility.initialY = 325m
+
+*.ueD2DTx_FULBUF[8].mobility.initialX = 340m
+*.ueD2DTx_FULBUF[8].mobility.initialY = 315m
+*.ueD2DRx_FULBUF[8].mobility.initialX = 340m
+*.ueD2DRx_FULBUF[8].mobility.initialY = 325m
+
+*.ueD2DTx_FULBUF[9].mobility.initialX = 350m
+*.ueD2DTx_FULBUF[9].mobility.initialY = 315m
+*.ueD2DRx_FULBUF[9].mobility.initialX = 350m
+*.ueD2DRx_FULBUF[9].mobility.initialY = 325m
+
+*.ueD2DTx_FULBUF[0].mobility.initialX = ${d=325..465 step 20}m 
+*.ueD2DTx_FULBUF[0].mobility.initialY = 305m # 0m -> 150m away from the cluster
+*.ueD2DRx_FULBUF[0].mobility.initialX = ${d}m # 12m from Tx
+*.ueD2DRx_FULBUF[0].mobility.initialY = 317m
+output-scalar-file = ${resultdir}/${configname}/d${d}-rep${repetition}.sca
+repeat=20
+sim-time-limit=20s
