--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -681,4 +681,30 @@ extends=Base
 *.ueD2DRx_FULBUF[0].mobility.initialY = 317m
 output-scalar-file = ${resultdir}/${configname}/d${d}-rep${repetition}.sca
 repeat=20
-sim-time-limit=20s
+sim-time-limit=0.1s
+
+
+[Config testInCellInterferenceAnalytical]
+extends=Base
+
+*.numUeD2DTx_FULBUF = 2
+*.numUeD2DRx_FULBUF = 2
+**.deployer.numRbDl = 1
+**.deployer.numRbUl = 1
+**.numBands = 1
+**.schedulingDisciplineUl = "REUSE_TESTER"
+**.schedulingDisciplineDl = "REUSE_TESTER"
+
+*.ueD2DTx_FULBUF[0].mobility.initialX = ${d=405..500 step 5}m
+*.ueD2DTx_FULBUF[0].mobility.initialY = 400m
+*.ueD2DRx_FULBUF[0].mobility.initialX = ${d}m
+*.ueD2DRx_FULBUF[0].mobility.initialY = 430m
+
+*.ueD2DTx_FULBUF[1].mobility.initialX = 400m
+*.ueD2DTx_FULBUF[1].mobility.initialY = 400m
+*.ueD2DRx_FULBUF[1].mobility.initialX = 400m
+*.ueD2DRx_FULBUF[1].mobility.initialY = 430m
+
+output-scalar-file = ${resultdir}/${configname}/d${d}-rep${repetition}.sca
+repeat=20
+sim-time-limit=0.5s
