--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -708,3 +708,49 @@ extends=Base
 output-scalar-file = ${resultdir}/${configname}/d${d}-rep${repetition}.sca
 repeat=20
 sim-time-limit=5s
+
+
+[Config testInCellInterferenceAddition]
+extends=Base
+
+*.numUeD2DTx_FULBUF = ${numPairs=2..6 step 1}
+*.numUeD2DRx_FULBUF = ${numPairs}
+**.deployer.numRbDl = 1
+**.deployer.numRbUl = 1
+**.numBands = 1
+**.schedulingDisciplineUl = "REUSE_TESTER"
+**.schedulingDisciplineDl = "REUSE_TESTER"
+
+*.ueD2DTx_FULBUF[0].mobility.initialX = 400m
+*.ueD2DTx_FULBUF[0].mobility.initialY = 400m
+*.ueD2DRx_FULBUF[0].mobility.initialX = 400m
+*.ueD2DRx_FULBUF[0].mobility.initialY = 410m
+
+*.ueD2DTx_FULBUF[1].mobility.initialX = 415.451m
+*.ueD2DTx_FULBUF[1].mobility.initialY = 447.553m
+*.ueD2DRx_FULBUF[1].mobility.initialX = 415.451m
+*.ueD2DRx_FULBUF[1].mobility.initialY = 452.553m
+
+*.ueD2DTx_FULBUF[2].mobility.initialX = 359.549m
+*.ueD2DTx_FULBUF[2].mobility.initialY = 429.389m
+*.ueD2DRx_FULBUF[2].mobility.initialX = 359.549m
+*.ueD2DRx_FULBUF[2].mobility.initialY = 434.389m
+
+*.ueD2DTx_FULBUF[3].mobility.initialX = 359.549m
+*.ueD2DTx_FULBUF[3].mobility.initialY = 370.611m
+*.ueD2DRx_FULBUF[3].mobility.initialX = 359.549m
+*.ueD2DRx_FULBUF[3].mobility.initialY = 374.611m
+
+*.ueD2DTx_FULBUF[4].mobility.initialX = 415.451m
+*.ueD2DTx_FULBUF[4].mobility.initialY = 352.447m
+*.ueD2DRx_FULBUF[4].mobility.initialX = 415.451m
+*.ueD2DRx_FULBUF[4].mobility.initialY = 357.447m
+
+*.ueD2DTx_FULBUF[5].mobility.initialX = 450m
+*.ueD2DTx_FULBUF[5].mobility.initialY = 400m
+*.ueD2DRx_FULBUF[5].mobility.initialX = 450m
+*.ueD2DRx_FULBUF[5].mobility.initialY = 405m
+
+output-scalar-file = ${resultdir}/${configname}/n${numPairs}-rep${repetition}.sca
+repeat=20
+sim-time-limit=5s
