--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -22,8 +22,8 @@ seed-set = ${repetition}
 **.channelControl.carrierFrequency = 2100e+6Hz
 
 ################ PhyLayer parameters #####################
-**.lteNic.phy.channelModel=xmldoc("config_channel.xml")
-**.feedbackComputation = xmldoc("config_channel.xml")
+**.lteNic.phy.channelModel=xmldoc("config_channel_fspl.xml")
+**.feedbackComputation = xmldoc("config_channel_fspl.xml")
 
 ################ Mobility parameters #####################
 **.mobility.constraintAreaMinZ = 0m
@@ -713,6 +713,9 @@ sim-time-limit=5s
 [Config testInCellInterferenceAddition]
 extends=Base
 
+**.lteNic.phy.channelModel=xmldoc("config_channel_fspl.xml")
+**.feedbackComputation = xmldoc("config_channel_fspl.xml")
+
 *.numUeD2DTx_FULBUF = ${numPairs=2..6 step 1}
 *.numUeD2DRx_FULBUF = ${numPairs}
 **.deployer.numRbDl = 1
@@ -754,3 +757,9 @@ extends=Base
 output-scalar-file = ${resultdir}/${configname}/n${numPairs}-rep${repetition}.sca
 repeat=20
 sim-time-limit=5s
+
+[Config testInCellInterferenceAdditionUrbanMacro]
+extends=testInCellInterferenceAddition
+
+**.lteNic.phy.channelModel=xmldoc("config_channel_urban_macro.xml")
+**.feedbackComputation = xmldoc("config_channel_urban_macro.xml")
