--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -167,7 +167,7 @@ network=FrequencyNetwork
 **.ueD2DTx_FULBUF[*].udpApp[0].destAddresses = "ueD2DRx_FULBUF[" + string(ancestorIndex(1)) + "]"
 **.ue*Tx_FULBUF[*].udpApp[0].destPort = 1000
 **.ue*Tx_FULBUF[*].udpApp[0].sendInterval = 0.0001s # 10 packets per TTI = full buffer
-**.ue*Tx_FULBUF[*].udpApp[0].messageLength = 500B  # 100B/ms = 100000B/s = 800 kbps
+**.ue*Tx_FULBUF[*].udpApp[0].messageLength = 50B  
 ## Full Buffer receivers.
 **.ue*Rx_FULBUF[*].udpApp[0].typename = "UDPSink"
 **.ue*Rx_FULBUF[*].udpApp[0].localPort = 1000
