--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -764,3 +764,13 @@ extends=testInCellInterferenceAddition
 
 **.lteNic.phy.channelModel=xmldoc("config_channel_urban_macro.xml")
 **.feedbackComputation = xmldoc("config_channel_urban_macro.xml")
+
+
+[Config lre]
+extends = paper_voip_sta
+**.lre.type = "CCDF"
+**.lre.xmin = 1E-5
+**.lre.xmax = 1E-3
+**.lre.bin_size = 1E-5
+**.lre.signal_name = "voIPFrameDelay"
+sim-time-limit = 100000s
