adapt lre params

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -769,8 +769,8 @@ extends=testInCellInterferenceAddition
 [Config lre]
 extends = paper_voip_sta
 **.lre.type = "CCDF"
-**.lre.xmin = 1E-5
-**.lre.xmax = 1E-3
-**.lre.bin_size = 1E-5
+**.lre.xmin = 0
+**.lre.xmax = 0.05
+**.lre.bin_size = 0.001
 **.lre.signal_name = "voIPFrameDelay"
 sim-time-limit = 100000s
