[Config lre-long-run]

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -768,9 +768,29 @@ extends=testInCellInterferenceAddition
 
 [Config lre]
 extends = paper_voip_sta
+network = FrequencyNetworkLRE
 **.lre.type = "CCDF"
-**.lre.xmin = 0
-**.lre.xmax = 0.05
-**.lre.bin_size = 0.001
+**.lre.xmin = 0.004
+**.lre.xmax = 0.006
+**.lre.bin_size = 0.0001
 **.lre.signal_name = "voIPFrameDelay"
 sim-time-limit = 100000s
+
+[Config lre-rr]
+extends = lre
+**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
+**.lre.xmin = 0.004
+**.lre.xmax = 0.024
+**.lre.bin_size = 0.004
+**.lre.progress_interval = 300
+
+[Config lre-long-run]
+extends = lre
+**.lre.xmin = 0.04
+**.lre.xmax = 0.05
+**.lre.bin_size = 0.0025
+**.lre.max_error = ${e=0.15, 0.1, 0.05, 0.025}
+**.lre.output_file = "lre_output_e" + string(${e}) + ".txt"
+**.lre.progress_report_to_file = true
+**.lre.progress_interval = 100
+
