[Config lre-long-run]

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -793,4 +793,4 @@ extends = lre
 **.lre.output_file = "lre_output_e" + string(${e}) + ".txt"
 **.lre.progress_report_to_file = true
 **.lre.progress_interval = 100
-
+repeat = 1
