--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -794,3 +794,15 @@ extends = lre
 **.lre.progress_report_to_file = true
 **.lre.progress_interval = 100
 repeat = 2
+
+[Config lre-long-run-rare]
+extends = lre
+**.lre.xmin = 0.2
+**.lre.xmax = 0.23
+**.lre.bin_size = 0.01
+**.lre.max_error = ${e=0.15, 0.1, 0.05, 0.025}
+**.lre.output_file = "lre_output_rare_e" + string(${e}) + ".txt"
+*.lre.progress_file = "lre_output_rare_e" + string(${e}) + "_progress.txt"
+**.lre.progress_report_to_file = true
+**.lre.progress_interval = 100
+repeat = 2
