--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -790,10 +790,11 @@ extends = lre
 **.lre.xmax = 0.01
 **.lre.bin_size = 0.00025
 **.lre.max_error = ${e=0.15, 0.1, 0.05, 0.025}
-**.lre.output_file = "lre_output_e" + string(${e}) + ".txt"
 **.lre.progress_report_to_file = true
 **.lre.progress_interval = 100
-repeat = 2
+**.lre.output_file = ${resultdir}/${configname}/lre_output_e${e}-rep${repetition}.txt
+**.lre.output_file = ${resultdir}/${configname}/lre_progress_e${e}-rep${repetition}.txt
+repeat = 1
 
 [Config lre-long-run-rare]
 extends = lre
@@ -801,8 +802,8 @@ extends = lre
 **.lre.xmax = 0.23
 **.lre.bin_size = 0.01
 **.lre.max_error = ${e=0.15, 0.1, 0.05, 0.025}
-**.lre.output_file = "lre_output_rare_e" + string(${e}) + ".txt"
-*.lre.progress_file = "lre_output_rare_e" + string(${e}) + "_progress.txt"
 **.lre.progress_report_to_file = true
 **.lre.progress_interval = 100
-repeat = 2
+**.lre.output_file = ${resultdir}/${configname}/lre_output_e${e}-rep${repetition}.txt
+**.lre.output_file = ${resultdir}/${configname}/lre_progress_e${e}-rep${repetition}.txt
+repeat = 1
