--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -790,10 +790,10 @@ extends = lre
 **.lre.xmax = 0.01
 **.lre.bin_size = 0.00025
 **.lre.max_error = ${e=0.15, 0.1, 0.05, 0.025}
+**.lre.output_file = "lre_output_e" + string(${e}) + ".txt"
 **.lre.progress_report_to_file = true
 **.lre.progress_interval = 100
-**.lre.output_file = ${resultdir}/${configname}/lre_output_e${e}-rep${repetition}.txt
-**.lre.output_file = ${resultdir}/${configname}/lre_progress_e${e}-rep${repetition}.txt
+**.lre.progress_file = "lre_progress_e" + string(${e}) + ".txt"
 repeat = 1
 
 [Config lre-long-run-rare]
@@ -804,6 +804,6 @@ extends = lre
 **.lre.max_error = ${e=0.15, 0.1, 0.05, 0.025}
 **.lre.progress_report_to_file = true
 **.lre.progress_interval = 100
-**.lre.output_file = ${resultdir}/${configname}/lre_output_e${e}-rep${repetition}.txt
-**.lre.output_file = ${resultdir}/${configname}/lre_progress_e${e}-rep${repetition}.txt
+**.lre.output_file = "lre_output_rare_e" + string(${e}) + ".txt"
+**.lre.progress_file = "lre_progress_rare_e" + string(${e}) + ".txt"
 repeat = 1
